--- a/static/styles/_variables.scss
+++ b/static/styles/_variables.scss
@@ -1,5 +1,7 @@
 $break-small: 720px;
-$break-mid: 1200px;
+// $break-between: 
+$break-mid: 1000px;
+$break-large: 1320px;
 $base-size: 16px;
 $sans-serif-font: 'Lato', sans-serif;
 $serif-font: 'Lora', serif;
